# odooghost

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  exeample-stack.yml  exemple-stack.yml  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: docs.yaml  lint.yaml  orchestrator.yaml  release.yaml  test.yaml
docs/: index.md  reference.md  tutorials.md
exemples/: basic.yml  full.yml
odooghost/: __init__.py  __main__.py  addons.py  config.py  constant.py  container.py  context.py  exceptions.py  filters.py  git.py  logger.py  renderer.py  stack.py  types.py
odooghost/cli/: __init__.py  config.py  main.py  plugins.py  root.py  stack.py
odooghost/cli/stack/: __init__.py  config.py  data.py  root.py
odooghost/cli/stack/data/: root.py
odooghost/config/: __init__.py  addons.py  app.py  db.py  dependency.py  odoo.py  service.py  stack.py
odooghost/services/: __init__.py  base.py  db.py  mail.py  odoo.py  postgres.py
odooghost/services/odoo/: __init__.py  addons.py  service.py
odooghost/templates/: Dockerfile.j2
odooghost/utils/: __init__.py  autocomplete.py  docker.py  exec.py  misc.py  plugins.py  progress_stream.py  signals.py  stream.py  sync_to_async.py
odooghost/web/: application.py
odooghost/web/api/: schema.py  schema_types.py  subscription.py
odooghost/web/api/mutation/: stack.py
odooghost/web/api/query/: dashboard.py  stack.py
search/: search_index.json
tests/: test_version.py
web/: .env.development  .env.production  README.md  apollo.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
web/public/: site.webmanifest
web/src/: App.vue  apollo.js  constant.js  main.js
web/src/api/: subscription.js
web/src/api/mutation/: stack.js
web/src/api/query/: dashboard.js  stack.js
web/src/assets/: main.css
web/src/components/: VActivity.vue  VContainers.vue  VDataView.vue  VHeader.vue  VLoading.vue  VModal.vue  VNav.vue  VSidebar.vue  VStat.vue
web/src/components/alerts/: VErrorAlert.vue  VSuccessAlert.vue  VWarningAlert.vue
web/src/components/alerts/components/: VAlert.vue
web/src/components/modals/: VNetworkError.vue
web/src/components/transitions/: VTransitionFade.vue
web/src/router/: index.js
web/src/stores/: modal.js
web/src/views/container/: ContainersView.vue
web/src/views/dashboard/: DashboardView.vue
web/src/views/stack/: StackItemIndexView.vue  StackItemView.vue  StackView.vue
web/src/views/usage/: UsageView.vue
